--- a/common/pom.xml
+++ b/common/pom.xml
@@ -21,5 +21,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-core</artifactId>
+            <version>2.12.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
